# tauri-demo

./: .gitignore  INSTALLATION.md  README.md  TROUBLESHOOTING.md  create-icons.sh  dev.sh  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: BundleSizeComparison.tsx  FeatureShowcase.tsx  Header.tsx  Navigation.tsx  PerformanceDemo.tsx  SecurityDemo.tsx  SystemIntegration.tsx
